--- a/lesson6/lesson6.csproj
+++ b/lesson6/lesson6.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="C:\Users\Student\Desktop\Car.cs" Link="Car.cs" />
+    <Compile Include="C:\Users\Student\Desktop\дз1.cs" Link="дз1.cs" />
   </ItemGroup>
 
 </Project>
